feat: js_ajax 현재 오류 있음

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>OSS04</title>
 </head>
 <body>
-  <a href="./time.html">스톱워치</a>
+  <a href="./time.html">[lab_1]스톱워치</a>
+  <a href="./data.html">Get Data</a>
 </body>
 </html>
