feat: site link add

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OSS04</title>
 </head>
+
 <body>
-  <a href="./time.html">[lab_1]스톱워치</a>
-  <a href="./data.html">Get Data</a>
+  <button>
+    <a href="./time.html">[lab_1]스톱워치</a>
+  </button>
+  <button>
+    <a href="./welcome.html">[lab_2]환영페이지</a>
+  </button>
+  <button>
+    <a href="./data.html">[lab_3]데이터조회</a>
+  </button>
+  <button>
+    <a href="./js_ajax.html">[lab_4]AJAX CRUD</a>
+  </button>
 </body>
+
 </html>
