--- a/js_ajax.html
+++ b/js_ajax.html
@@ -25,7 +25,7 @@
   const dBtn = document.getElementById("delete");
 
   function getData(){
-    fetch("data.json")
+    fetch("./data.json")
       .then(response => response.json())
       .then(data => {
         list.innerHTML = "";
